[metadata]
name = python-cicoclient
summary = A client library for the ci.centos.org administrative interface
description-file =
    README.rst
author = David Moreau Simard
author-email = dms@redhat.com
home-page = https://github.com/dmsimard/python-cicoclient
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Programming Language :: Python :: 2.7
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cicoclient

[build_sphinx]
source-dir = docs
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/html

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

[entry_points]
console_scripts =
    cico = cicoclient.shell:main

cico.cli =
    inventory = cicoclient.cli:Inventory
    node_get = cicoclient.cli:NodeGet
    node_done = cicoclient.cli:NodeDone
